Feature: Endpoint to cancel subscription
