# swagger_output.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "0.1.0",
+    "version": "0.2.0",
     "title": "REST API",
     "description": ""
   },
@@ -46,6 +46,55 @@
               "type": "object",
               "properties": {}
             }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Subscription created"
+          },
+          "400": {
+            "description": "Message of error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Message of error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
+    "/subscription/cancel/{subscriptionId}": {
+      "put": {
+        "tags": [
+          "Subscription"
+        ],
+        "summary": "Cancels a subscription",
+        "description": "Cancels a subscription",
+        "parameters": [
+          {
+            "name": "subscriptionId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "subscriptionId",
+            "in": "params",
+            "required": true,
+            "type": "string",
+            "description": "Subscription ID"
           }
         ],
         "responses": {
